mockito tests